<?xml version="1.0"?>
<package format="2">
  <name>fast_model</name>
  <version>1.0.0</version>
  <description>The fast_model package</description>
  <maintainer email="lhc@todo.todo">lhc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tracker_msgs</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
