<?xml version="1.0"?>
<package format="2">
  <name>fast_model</name>
  <version>1.0.0</version>
  <description>The fast_model package</description>
  <maintainer email="lhc@todo.todo">lhc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tracker_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>libgazebo5-dev</depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
